[tool.poetry]
name = "toolkit-tester"
version = "0.1.0"
description = ""
authors = ["Ben Petree <ben.petree@cognite.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cognite-toolkit = "0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
